[package]
name = "feature_extractor"
version = "0.1.0"
authors = ["Patrick von Platen <patrick.v.platen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
rayon-cond = { verson = "*", git = "https://github.com/nt10/rayon-cond" }
