[package]
name = "extractors"
version = "0.1.0"
authors = ["Patrick von Platen <patrick.v.platen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
rayon-cond = { version = "*", git = "https://github.com/n1t0/rayon-cond" }
hound = "3.4.0"
minimp3 = "0.5"
claxon = "0.4.3"
samplerate = "0.2.4"
